plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'edu.sc.seis.launch4j' version '3.0.6'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

group = 'org.example'
version = '1.0-SNAPSHOT'
ext {
    visuiVersion = '1.5.5'
}

repositories {
    google()
    mavenCentral()
    maven { url "https://maven.org/processing" }
    maven { url "https://jogamp.org/deployment/maven"}
    maven { url 'https://jitpack.io' }
}

dependencies {
    implementation 'com.google.code.gson:gson:2.12.1'
    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
    implementation 'com.yuvimasory:orange-extensions:1.3.0'
    implementation 'com.dropbox.core:dropbox-core-sdk:7.0.0'
    testImplementation platform('org.junit:junit-bom:5.12.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'


    implementation 'com.badlogicgames.gdx:gdx:1.13.1'
    implementation 'com.badlogicgames.gdx:gdx-backend-lwjgl3:1.13.1'
    implementation 'com.badlogicgames.gdx:gdx-platform:1.13.1:natives-desktop'
    implementation 'com.badlogicgames.gdx:gdx-box2d:1.13.1'
    implementation 'com.badlogicgames.gdx:gdx-box2d-platform:1.13.1:natives-desktop'
    implementation "com.badlogicgames.gdx:gdx-freetype:1.13.1"
    implementation "com.badlogicgames.gdx:gdx-freetype-platform:1.13.1:natives-desktop"

    implementation 'com.github.EmbroidePy.EmbroideryIO:embroideryio-jvm:0.1.23'

    implementation "com.kotcrab.vis:vis-ui:$visuiVersion"

    implementation fileTree(dir: 'library', include: '*.jar')
}
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClassName = 'fr.iamacat.PEmbroiderLauncher'
}

import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

shadowJar {
    archiveFileName = 'untitled-dependencies.jar'
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': 'fr.iamacat.PEmbroiderLauncher'
    }
}

launch4j {
    mainClassName = 'fr.iamacat.PEmbroiderLauncher'
    jreMinVersion = '17'
    initialHeapSize = 1024
    maxHeapSize = 8192
    jvmOptions = [
            '-XX:+UseZGC'
    ]
    jarTask = tasks.named("shadowJar")
    outputDirectory = file("$buildDir/libs")
    outfile = 'Catz-EmbroideryLauncher.exe'
    copyConfigurable = files(tasks.named("shadowJar").get().archiveFile)
}
tasks.named("build") {
    finalizedBy tasks.named("createExe")
}
